--- a/main.html
+++ b/main.html
@@ -3,6 +3,7 @@
 <html>
 
 <head>
+	 <title>Shaw's News</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
 
@@ -10,6 +11,42 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+ <!-- Header -->
+    <header class="header">
+        <h1>Shaw's News</h1>
+    </header>
+
+    <div class="container">
+
+        <!-- Latest News Section -->
+        <div class="latest-news-section">
+            <h3>Latest News Articles</h3>
+            <ul>
+                <li>Article 1</li>
+                <li>Article 2</li>
+                <li>Article 3</li>
+            </ul>
+        </div>
+
+        <!-- Main Article -->
+        <div class="main-article">
+            <h2>Main Article</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed auctor, magna eu fringilla malesuada,
+                ipsum risus eleifend est, non feugiat quam augue euismod eros. Sed malesuada, magna eu fringilla
+                malesuada, ipsum risus eleifend est, non feugiat quam augue euismod eros.
+            </p>
+        </div>
+
+        <!-- Pictorial News Section -->
+        <div class="pictorial-news-section">
+            <h3>Pictorial News</h3>
+            <img src="image_one.jpg" alt="News 1">
+            <img src="image_two.jpg" alt="News 2">
+            <img src="image_three.jpg" alt="News 3">
+        </div>
+
+    </div>
 
 </body>
 
